# chat-hummingbird

./: .gitignore  README.md  chatbot.py  pyproject.toml  qlora-finetune.py  requirements  unit_test.py
chat_hummingbird/: chatbot.py
chat_hummingbird/generator/: generator.py  openai.py
chat_hummingbird/summarizer/: summarizer.py
chat_hummingbird/vectordb/: chroma_manager.py  db_manager.py
data/: default.jsonl
data_preprocessor/: ed_chat_preprocessor.py  insert_ed_to_db.py
generator/: generator.py  openai.py
prompt/: Prompter.py  alpaca.json  hummingbird.json  kullm.json
src/: chatbot.py
src/generator/: openai.py
summarizer/: summarizer.py
tests/: conftest.py  run_manually.py  test_chatbot.py  test_chroma_manager.py  test_open_ai_generator.py  test_summarizer.py
vectordb/: chroma_manager.py  db_manager.py
