[tool.poetry]
name = "chat_hummingbird"
version = "0.1.0"
description = "chatbot of project hummingbird"
authors = ["yeti-s <sel9371@gmail.com>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

torch = "2.2.0"
chromadb = "0.4.22"
openai = "1.12.0"
langchain = "0.1.6"
langchain-openai = "0.0.6"
sentence-transformers = "2.3.1"
transformers = "4.37.2"

[tool.poetry.dev-dependencies]
pytest = "8.0.0"
dotenv = "1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.packages]]
include = "chat_hummingbird"