[tool.poetry]
name = "chat_hummingbird"
version = "0.1.0"
description = "chatbot of project hummingbird"
authors = ["yeti-s <sel9371@gmail.com>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"

torch = "^2.0.0"
chromadb = "^0.4.0"
openai = "^1.12.0"
langchain = "^0.1.6"
langchain-openai = "^0.0.6"
sentence-transformers = "^2.0.0"
transformers = "^4.37.0"

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"
dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.packages]]
include = "chat_hummingbird"